Fixes to buttons and removed extra padding on the line widget

--- a/css/common-forms.less
+++ b/css/common-forms.less
@@ -20,7 +20,8 @@
 .blog-post-more-link a,
 .blog-list-footer .paginate-older,
 .widget.clicktocall a,
-.widget.ecombasket .ecombasket-pull
+.widget.ecombasket .ecombasket-pull,
+.widget.filedownload button
  {
 	padding: 0 8px;
 	display: inline-block;
@@ -68,7 +69,8 @@
 .widget.paypalbuynow .widget.button.paypal,
 .widget.tweet a,
 .widget.dropbox button,
-.widget.clicktocall a {
+.widget.clicktocall a,
+.widget.filedownload button {
 	padding-left: 50px;
 	background-position: 18px center;
 	&:hover {
